--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* .jumbotron {
+  background-image: url("meet-and-tidy-jumbotro.png");
+  height: 500px;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size:auto;
+} */
